[project]
name = "spotify-playlist-sorter"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "librosa>=0.10",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "spotipy>=2.25.1",
    "streamlit>=1.31.0",
    "yt-dlp>=2026.3.17",
]

[dependency-groups]
dev = ["ruff>=0.11.6", "ty>=0.0.0a1", "deptry>=0.23.0"]

[tool.ty.environment]
python-version = "3.13"
extra-paths = ["app"]


[tool.ruff]
line-length = 120
target-version = "py313"

# Exclude files/directories
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "vendor",
]

[tool.ruff.lint]
# Enable all rules by default, then selectively disable
select = ["ALL"]
ignore = [
    # Rules that conflict with other tools/preferences
    "D203",    # one-blank-line-before-class
    "D212",    # multi-line-summary-first-line
    "FBT001",  # Boolean positional arg in function definition (required for typer)
    "FBT002",  # Boolean default value in function definition (required for typer)
    "C901",    # function too complex
    "PLR0911", # too many return statements
    "PLR0912", # too many branches
    "PLR0913", # too many arguments in function definition
    "PLR0915", # too many statements
    "TRY300",  # Consider moving this statement to an `else` block
    "COM812",  # Use a constant for the message in a raise statement
    "TC001",   # Move application import into a type-checking block
    "E501",    # Line too long
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101", "PLR2004", "ANN002", "ANN003"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 12
max-statements = 50

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"
